--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </head>
 <body>
     <div class="ms_container">
+
+        <!-- SEZIONE VISUALIZZATA -->
         <h1>Calcola il prezzo del tuo biglietto</h1>
         <div class="container-fluid">
             <div class="row row-cols-3">
@@ -30,26 +32,60 @@
                 </div>
                 <div class="col">
                     <div class="form-item">
-                        <label for="user-name">Km da percorrere</label>
-                        <input type="text" name="user-name" id="user-name">
+                        <label for="user-km">Km da percorrere</label>
+                        <input type="text" name="user-km" id="user-km">
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-item">
-                        <label for="user-color">Fascia d'età</label>
-                        <select name="user-color" id="user-color">
+                        <label for="user-age">Fascia d'età</label>
+                        <select name="user-age" id="user-age">
                             <option value=""></option>
-                            <option value="verde">Minorenne</option>
-                            <option value="rosso">Maggiorenne</option>
-                            <option value="blu">Over 65</option>
+                            <option value="minorenne">Minorenne</option>
+                            <option value="maggiorenne">Maggiorenne</option>
+                            <option value="over">Over 65</option>
                         </select>
                     </div>
                 </div>
             </div>
 
-            <button class="mt-5" id="form-btn">Genera</button>
-            <button class="mt-5" id="form-clear-btn">Annulla</button>
+            <button class="mt-5 ms_button" id="form-btn">Genera</button>
+            <button class="mt-5 ms_button" id="form-clear-btn">Annulla</button>
         </div>
+        <!-- /SEZIONE VISUALIZZATA -->
+
+        <h1>Il tuo biglietto</h1>
+
+        <!-- SEZIONE NON VISUALIZZATA -->
+        <div class="container-fluid d-none">
+            <h3 class="text-start text-black mb-4">Dettaglio passeggeri</h3>
+            <div class="row">
+                <div class="col-3 fw-bold">
+                    <h4 class="text-black">Nome passeggero</h4>
+                    <div id="user-name">qui verrà il nome passeggero</div>
+                </div>
+                <div class="col-2">
+                    <h5>Offerta</h5>
+                    <div>Qui verrà il nome offerta</div>
+                </div>
+                <div class="col-2">
+                    <h5>Carrozza</h5>
+                    <div>Qui verrà il numero carrozza da 1 a 9</div>
+                </div>
+                <div class="col-2">
+                    <h5>Codice CP</h5>
+                    <div>Qui verrà il codice CP</div>
+                </div>
+                <div class="col-3">
+                    <h5>Costo biglietto</h5>
+                    <div>Qui verrà stampato il totale</div>
+                </div>
+            </div>
+
+            
+        </div>
+        <!-- /SEZIONE NON VISUALIZZATA -->
+
     </div>
 </body>
 </html>
