--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         </div>
         <!-- /SEZIONE NON VISUALIZZATA -->
 
+        <!-- Scripts -->
+        <script src="js/script.js" type="text/javascript"></script>
     </div>
 </body>
 </html>
