--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
         <h1>Il tuo biglietto</h1>
 
         <!-- SEZIONE NON VISUALIZZATA -->
-        <div class="container-fluid d-none">
+        <div class="container-fluid">
             <h3 class="text-start text-black mb-4">Dettaglio passeggeri</h3>
             <div class="row">
                 <div class="col-3 fw-bold">
                     <h4 class="text-black">Nome passeggero</h4>
-                    <div id="user-name">qui verrà il nome passeggero</div>
+                    <div id="user-name"></div>
                 </div>
                 <div class="col-2">
                     <h5>Offerta</h5>
-                    <div>Qui verrà il nome offerta</div>
+                    <div id="offer"></div>
                 </div>
                 <div class="col-2">
                     <h5>Carrozza</h5>
-                    <div>Qui verrà il numero carrozza da 1 a 9</div>
+                    <div id="cab"></div>
                 </div>
                 <div class="col-2">
                     <h5>Codice CP</h5>
-                    <div>Qui verrà il codice CP</div>
+                    <div id="cp-code"></div>
                 </div>
                 <div class="col-3">
                     <h5>Costo biglietto</h5>
-                    <div>Qui verrà stampato il totale</div>
+                    <div id="total"></div>
                 </div>
             </div>
 
