--- a/index.html
+++ b/index.html
@@ -18,67 +18,72 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="ms_container">
+    <div class="container">
 
         <!-- SEZIONE VISUALIZZATA -->
-        <h1>Calcola il prezzo del tuo biglietto</h1>
-        <div class="container-fluid">
-            <div class="row row-cols-3">
-                <div class="col">
-                    <div class="form-item">
-                        <label for="user-name">Nome e Cognome</label>
-                        <input type="text" name="user-name" id="user-name">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-item">
-                        <label for="user-km">Km da percorrere</label>
-                        <input type="text" name="user-km" id="user-km">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-item">
-                        <label for="user-age">Fascia d'età</label>
-                        <select name="user-age" id="user-age">
-                            <option value=""></option>
-                            <option value="minorenne">Minorenne</option>
-                            <option value="maggiorenne">Maggiorenne</option>
-                            <option value="over">Over 65</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
+        <h1 class="text-center mt-5">Calcola il prezzo del tuo biglietto</h1>
 
-            <button class="mt-5 ms_button" id="form-btn">Genera</button>
-            <button class="mt-5 ms_button" id="form-clear-btn">Annulla</button>
+        <div class="ms_container">
+            <div class="container-fluid">
+                <div class="row row-cols-3">
+                    <div class="col">
+                        <div class="form-item">
+                            <label for="user-name">Nome e Cognome</label>
+                            <input type="text" name="user-name" id="user-name">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-item">
+                            <label for="user-km">Km da percorrere</label>
+                            <input type="text" name="user-km" id="user-km">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-item">
+                            <label for="user-age">Fascia d'età</label>
+                            <select name="user-age" id="user-age">
+                                <option value=""></option>
+                                <option value="minorenne">Minorenne</option>
+                                <option value="maggiorenne">Maggiorenne</option>
+                                <option value="over">Over 65</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <button class="mt-5 ms_button" id="form-btn">Genera</button>
+                <button class="mt-5 ms_button" id="form-clear-btn">Annulla</button>
+            </div>
         </div>
         <!-- /SEZIONE VISUALIZZATA -->
 
-        <h1>Il tuo biglietto</h1>
+        <h1 class="text-center mt-2">Il tuo biglietto</h1>
 
         <!-- SEZIONE NON VISUALIZZATA -->
-        <div class="container-fluid">
-            <h3 class="text-start text-black mb-4">Dettaglio passeggeri</h3>
-            <div class="row">
-                <div class="col-3 fw-bold">
-                    <h4 class="text-black">Nome passeggero</h4>
-                    <div id="user-name"></div>
-                </div>
-                <div class="col-2">
-                    <h5>Offerta</h5>
-                    <div id="offer"></div>
-                </div>
-                <div class="col-2">
-                    <h5>Carrozza</h5>
-                    <div id="cab"></div>
-                </div>
-                <div class="col-2">
-                    <h5>Codice CP</h5>
-                    <div id="cp-code"></div>
-                </div>
-                <div class="col-3">
-                    <h5>Costo biglietto</h5>
-                    <div id="total"></div>
+        <div class="ms_container2 d-none">
+            <div class="container-fluid">
+                <h3 class="text-start text-black mb-4">Dettaglio passeggeri</h3>
+                <div class="row justify-content-around">
+                    <div class="col-3 fw-bold">
+                        <h4 class="text-black">Nome passeggero</h4>
+                        <div id="user-name"></div>
+                    </div>
+                    <div class="col-2">
+                        <h5>Offerta</h5>
+                        <div id="offer"></div>
+                    </div>
+                    <div class="col-2">
+                        <h5>Carrozza</h5>
+                        <div id="cab"></div>
+                    </div>
+                    <div class="col-2">
+                        <h5>Codice CP</h5>
+                        <div id="cp-code"></div>
+                    </div>
+                    <div class="col-3">
+                        <h5>Costo biglietto</h5>
+                        <div id="total"></div>
+                    </div>
                 </div>
             </div>
 
